--- a/app/src/main/res/menu/menu_bottom_navigation_view.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation_view.xml
@@ -2,14 +2,17 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <item android:id="@+id/bottom_view_earth"
         android:icon="@drawable/ic_earth"
+        android:tooltipText="@string/earth_description_menu"
         android:title="@string/text_earht"/>
 
     <item android:id="@+id/bottom_view_mars"
         android:icon="@drawable/ic_mars"
+        android:tooltipText="@string/mars_description_menu"
         android:title="@string/text_mars"/>
 
     <item android:id="@+id/bottom_view_system"
         android:icon="@drawable/ic_system"
+        android:tooltipText="@string/system_description_menu"
         android:title="@string/text_system"/>
 
 </menu>
