--- a/app/src/main/res/menu/menu_bottom_navigation.xml
+++ b/app/src/main/res/menu/menu_bottom_navigation.xml
@@ -31,6 +31,10 @@
             android:id="@+id/navigation_six"
             android:icon="@drawable/ic_archive"
             android:title="@string/title_navigation_six" />
+        <item
+            android:id="@+id/navigation_seven"
+            android:icon="@drawable/ic_baseline_shuffle_24"
+            android:title="@string/title_navigation_seven" />
 
     </group>
 
